[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/Main/Pages/SuppliesScenes/Lemon/LemonProductContainer.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/Main/Pages/SuppliesScenes/Water/WaterProductContainer.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/Main/Pages/SuppliesScenes/Sugar/SugarProductContainer.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/Main/Pages/SuppliesScenes/Cups/CupProdcutContainer.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/Main/Pages/SuppliesScenes/SuppliesSceneHandler.gd" type="Script" id=5]

[node name="SuppliesContainer" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 23
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SuppliesHeader" type="Label" parent="."]
margin_right = 1366.0
margin_bottom = 14.0
text = "Supplies"
align = 1

[node name="GridContainer" type="GridContainer" parent="."]
margin_top = 37.0
margin_right = 1366.0
margin_bottom = 297.0
custom_constants/vseparation = 20
custom_constants/hseparation = 60

[node name="WaterProductContainer" parent="GridContainer" instance=ExtResource( 2 )]
margin_right = 547.0
margin_bottom = 50.0

[node name="LemonProductContainer" parent="GridContainer" instance=ExtResource( 1 )]
margin_top = 70.0
margin_right = 547.0
margin_bottom = 120.0

[node name="SugarProductContainer" parent="GridContainer" instance=ExtResource( 3 )]
margin_top = 140.0
margin_right = 547.0
margin_bottom = 190.0

[node name="CupProductContainer" parent="GridContainer" instance=ExtResource( 4 )]
margin_top = 210.0
margin_right = 547.0
margin_bottom = 260.0

[node name="TotalCost" type="Label" parent="."]
margin_top = 320.0
margin_right = 1366.0
margin_bottom = 334.0
text = "The total cost of these items is: $999.00"

[node name="Button" type="Button" parent="."]
margin_left = 633.0
margin_top = 357.0
margin_right = 733.0
margin_bottom = 457.0
rect_min_size = Vector2( 100, 100 )
size_flags_horizontal = 4
text = "Purchase"
[connection signal="visibility_changed" from="." to="." method="_on_SuppliesContainer_visibility_changed"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
